@@ -1,5 +1,5 @@
 //                                                                          //
-// Copyright 2018 Mirko Raner                                               //
+// Copyright 2018 - 2020 Mirko Raner                                        //
 //                                                                          //
 // Licensed under the Apache License, Version 2.0 (the "License");          //
 // you may not use this file except in compliance with the License.         //
@@ -21,9 +21,9 @@ public class ObjectFactory
     {
         try
         {
-            return type.newInstance();
+            return type.getDeclaredConstructor().newInstance();
         }
-        catch (@SuppressWarnings("unused") InstantiationException | IllegalAccessException exception)
+        catch (@SuppressWarnings("unused") Exception exception)
         {
             return null;
         }
